--- a/modelo_reserva_hoteles.ipynb
+++ b/modelo_reserva_hoteles.ipynb
@@ -807,6 +807,313 @@
         "print(f\"   - Hay variaciones significativas en las tasas de cancelación por segmento de mercado\")\n",
         "print(f\"   - Se observan patrones estacionales en las cancelaciones por mes de llegada\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 78,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Bibliotecas importadas correctamente.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Celda 1: Importar bibliotecas necesarias para el preprocesamiento\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.model_selection import train_test_split, RandomizedSearchCV, GridSearchCV\n",
+        "from sklearn.metrics import mean_absolute_error, accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
+        "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.decomposition import PCA\n",
+        "from sklearn.compose import ColumnTransformer\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "\n",
+        "from matplotlib import pyplot as plt\n",
+        "\n",
+        "import seaborn as sns\n",
+        "\n",
+        "from sklearn.preprocessing import (\n",
+        "    MinMaxScaler,\n",
+        "    OneHotEncoder,\n",
+        "    OrdinalEncoder,\n",
+        "    StandardScaler,\n",
+        "    PolynomialFeatures,\n",
+        "    FunctionTransformer,\n",
+        ")\n",
+        "\n",
+        "print(\"Bibliotecas importadas correctamente.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 95,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Verificando valores nulos:\n",
+            "No hay valores nulos en el dataset.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Celda 2: Verificar valores nulos en el dataset\n",
+        "print(\"Verificando valores nulos:\")\n",
+        "nulos = df.isnull().sum()\n",
+        "print(nulos[nulos > 0] if nulos.any() > 0 else \"No hay valores nulos en el dataset.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 96,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Variables numéricas (14): ['no_of_adults', 'no_of_children', 'no_of_weekend_nights', 'no_of_week_nights', 'required_car_parking_space', 'lead_time', 'arrival_year', 'arrival_month', 'arrival_date', 'repeated_guest', 'no_of_previous_cancellations', 'no_of_previous_bookings_not_canceled', 'avg_price_per_room', 'no_of_special_requests']\n",
+            "Variables categóricas (3): ['type_of_meal_plan', 'room_type_reserved', 'market_segment_type']\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Celda 3 (corregida): Identificar variables numéricas y categóricas\n",
+        "# Separamos la variable objetivo del resto de variables\n",
+        "# Excluimos Booking_ID ya que es solo un identificador\n",
+        "X = df.drop(['booking_status', 'Booking_ID'], axis=1)\n",
+        "y = df['booking_status']\n",
+        "\n",
+        "# Identificamos automáticamente las variables numéricas y categóricas\n",
+        "numerical_features = X.select_dtypes(include=['int64', 'float64']).columns.tolist()\n",
+        "categorical_features = X.select_dtypes(include=['object', 'category']).columns.tolist()\n",
+        "\n",
+        "print(f\"Variables numéricas ({len(numerical_features)}):\", numerical_features)\n",
+        "print(f\"Variables categóricas ({len(categorical_features)}):\", categorical_features)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 97,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Valores únicos en variables categóricas:\n",
+            "- type_of_meal_plan: 4 valores únicos\n",
+            "- room_type_reserved: 7 valores únicos\n",
+            "- market_segment_type: 5 valores únicos\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Celda adicional: Verificar valores únicos en variables categóricas\n",
+        "print(\"Valores únicos en variables categóricas:\")\n",
+        "for col in categorical_features:\n",
+        "    unique_values = X[col].nunique()\n",
+        "    print(f\"- {col}: {unique_values} valores únicos\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 98,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Dimensiones del conjunto de entrenamiento: (29020, 17), (29020,)\n",
+            "Dimensiones del conjunto de prueba: (7255, 17), (7255,)\n",
+            "\n",
+            "Distribución de la variable objetivo:\n",
+            "Entrenamiento:\n",
+            "booking_status\n",
+            "0    67.236389\n",
+            "1    32.763611\n",
+            "Name: proportion, dtype: float64\n",
+            "\n",
+            "Prueba:\n",
+            "booking_status\n",
+            "0    67.236389\n",
+            "1    32.763611\n",
+            "Name: proportion, dtype: float64\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Celda 4: Dividir los datos en conjuntos de entrenamiento y prueba\n",
+        "# Usamos un 80% para entrenamiento y 20% para prueba\n",
+        "random_state = 42\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=random_state, stratify=y)\n",
+        "\n",
+        "# Verificamos las dimensiones de los conjuntos\n",
+        "print(f\"Dimensiones del conjunto de entrenamiento: {X_train.shape}, {y_train.shape}\")\n",
+        "print(f\"Dimensiones del conjunto de prueba: {X_test.shape}, {y_test.shape}\")\n",
+        "\n",
+        "# Verificamos la distribución de la variable objetivo en cada conjunto\n",
+        "print(\"\\nDistribución de la variable objetivo:\")\n",
+        "print(\"Entrenamiento:\")\n",
+        "print(y_train.value_counts(normalize=True) * 100)\n",
+        "print(\"\\nPrueba:\")\n",
+        "print(y_test.value_counts(normalize=True) * 100)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 99,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Pipeline de preprocesamiento configurado.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Celda 5: Crear el preprocesador con el enfoque de Pipeline\n",
+        "# Definimos los transformadores para cada tipo de variable\n",
+        "numeric_transformer = Pipeline(steps=[\n",
+        "    ('scaler', StandardScaler())\n",
+        "])\n",
+        "\n",
+        "categorical_transformer = Pipeline(steps=[\n",
+        "    ('onehot', OneHotEncoder(handle_unknown='ignore'))\n",
+        "])\n",
+        "\n",
+        "# Creamos el preprocesador completo usando ColumnTransformer\n",
+        "preprocessor = ColumnTransformer(\n",
+        "    transformers=[\n",
+        "        ('num', numeric_transformer, numerical_features),\n",
+        "        ('cat', categorical_transformer, categorical_features)\n",
+        "    ],\n",
+        "    verbose_feature_names_out=False\n",
+        ")\n",
+        "\n",
+        "# Creamos el pipeline completo que incluye el preprocesamiento\n",
+        "pipeline = Pipeline(steps=[\n",
+        "    ('preprocessor', preprocessor)\n",
+        "])\n",
+        "\n",
+        "print(\"Pipeline de preprocesamiento configurado.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 100,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Dimensiones después del preprocesamiento:\n",
+            "X_train: (29020, 30)\n",
+            "X_test: (7255, 30)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Celda 6: Aplicar el preprocesamiento a los datos de entrenamiento\n",
+        "# Ajustamos el preprocesador a los datos de entrenamiento\n",
+        "pipeline.fit(X_train)\n",
+        "\n",
+        "# Transformamos los datos de entrenamiento y prueba\n",
+        "X_train_preprocessed = pipeline.transform(X_train)\n",
+        "X_test_preprocessed = pipeline.transform(X_test)\n",
+        "\n",
+        "# Obtenemos los nombres de las características después del preprocesamiento\n",
+        "feature_names = pipeline.named_steps['preprocessor'].get_feature_names_out()\n",
+        "\n",
+        "print(f\"Dimensiones después del preprocesamiento:\")\n",
+        "print(f\"X_train: {X_train_preprocessed.shape}\")\n",
+        "print(f\"X_test: {X_test_preprocessed.shape}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 101,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Primeras 10 características después del preprocesamiento:\n",
+            "- no_of_adults\n",
+            "- no_of_children\n",
+            "- no_of_weekend_nights\n",
+            "- no_of_week_nights\n",
+            "- required_car_parking_space\n",
+            "- lead_time\n",
+            "- arrival_year\n",
+            "- arrival_month\n",
+            "- arrival_date\n",
+            "- repeated_guest\n",
+            "...\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Celda 7: Mostrar algunas de las nuevas características generadas\n",
+        "print(f\"Primeras 10 características después del preprocesamiento:\")\n",
+        "for i, feature in enumerate(feature_names[:10]):\n",
+        "    print(f\"- {feature}\")\n",
+        "print(\"...\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 102,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Distribución de clases en el conjunto de entrenamiento:\n",
+            "- Clase 0 (No cancelada): 19512 muestras (67.24%)\n",
+            "- Clase 1 (Cancelada): 9508 muestras (32.76%)\n",
+            "\n",
+            "Ratio de desbalance (mayoría/minoría): 2.05\n",
+            "Recomendación: Usar 'class_weight='balanced'' o {0:1, 1:2.05} en los modelos\n",
+            "\n",
+            "Alternativas para manejar el desbalance:\n",
+            "1. Usar class_weight='balanced' en los modelos\n",
+            "2. Utilizar la métrica roc_auc_score en lugar de accuracy para la evaluación\n",
+            "3. Ajustar el umbral de clasificación según la curva ROC\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Celda 8: Analizar el desbalance de clases para futuros modelos\n",
+        "print(f\"Distribución de clases en el conjunto de entrenamiento:\")\n",
+        "class_distribution = y_train.value_counts(normalize=True) * 100\n",
+        "print(f\"- Clase 0 (No cancelada): {(y_train == 0).sum()} muestras ({class_distribution[0]:.2f}%)\")\n",
+        "print(f\"- Clase 1 (Cancelada): {(y_train == 1).sum()} muestras ({class_distribution[1]:.2f}%)\")\n",
+        "\n",
+        "# Calculamos el peso para la clase minoritaria (para usar en los modelos)\n",
+        "weight_ratio = (y_train == 0).sum() / (y_train == 1).sum()\n",
+        "print(f\"\\nRatio de desbalance (mayoría/minoría): {weight_ratio:.2f}\")\n",
+        "print(f\"Recomendación: Usar 'class_weight='balanced'' o {{0:1, 1:{weight_ratio:.2f}}} en los modelos\")\n",
+        "\n",
+        "# Alternativas a SMOTE\n",
+        "print(\"\\nAlternativas para manejar el desbalance:\")\n",
+        "print(\"1. Usar class_weight='balanced' en los modelos\")\n",
+        "print(\"2. Utilizar la métrica roc_auc_score en lugar de accuracy para la evaluación\")\n",
+        "print(\"3. Ajustar el umbral de clasificación según la curva ROC\")"
+      ]
     }
   ],
   "metadata": {
