Actualizacion del paper con imagenes respectivas

--- a/modelo_reserva_hoteles.ipynb
+++ b/modelo_reserva_hoteles.ipynb
@@ -3630,6 +3630,79 @@
         "print(\"   - Implementar estrategias específicas para segmentos con alta probabilidad de cancelación\")\n",
         "print(\"   - Monitorear y revisar políticas de precios para optimizar ocupación\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 101,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "CONCLUSIONES FINALES DEL PROYECTO:\n",
+            "--------------------------------------------------\n",
+            "1. DESEMPEÑO DEL MODELO:\n",
+            "   - El modelo Gradient Boosting logró el mejor rendimiento con:\n",
+            "     * Accuracy: 90.17%\n",
+            "     * Precisión: 87.78%\n",
+            "     * ROC AUC: 95.90%\n",
+            "   - El modelo puede predecir eficazmente las cancelaciones con alta confiabilidad\n",
+            "\n",
+            "2. FACTORES DETERMINANTES SEGÚN SHAP:\n",
+            "   - Tiempo de anticipación (lead_time): Principal predictor de cancelaciones\n",
+            "   - Solicitudes especiales: Reducen la probabilidad de cancelación\n",
+            "   - Precio por habitación: Precios más altos aumentan las cancelaciones\n",
+            "   - Segmento de mercado: Reservas 'Online' tienen mayor riesgo\n",
+            "   - Mes de llegada: Meses de verano (junio, julio, agosto) con más cancelaciones\n",
+            "\n",
+            "3. RECOMENDACIONES ESTRATÉGICAS PARA HOTELES:\n",
+            "   - Implementar políticas de cancelación escalonadas según el lead_time\n",
+            "   - Crear incentivos para solicitudes especiales como método de compromiso\n",
+            "   - Revisar estrategias de precios para equilibrar ingresos y reducir cancelaciones\n",
+            "   - Diseñar estrategias específicas para reservas del segmento 'Online'\n",
+            "   - Ajustar estrategias de overbooking según la temporada del año\n",
+            "\n",
+            "4. SIGUIENTES PASOS:\n",
+            "   - Implementar un sistema de scoring para nuevas reservas\n",
+            "   - Monitorizar el rendimiento del modelo con nuevos datos\n",
+            "   - Desarrollar un dashboard interactivo para uso operativo\n",
+            "   - Complementar con análisis de impacto financiero de las cancelaciones\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Celda 20: Conclusiones finales y recomendaciones\n",
+        "print(\"CONCLUSIONES FINALES DEL PROYECTO:\")\n",
+        "print(\"-\" * 50)\n",
+        "\n",
+        "print(\"1. DESEMPEÑO DEL MODELO:\")\n",
+        "print(\"   - El modelo Gradient Boosting logró el mejor rendimiento con:\")\n",
+        "print(\"     * Accuracy: 90.17%\")\n",
+        "print(\"     * Precisión: 87.78%\")\n",
+        "print(\"     * ROC AUC: 95.90%\")\n",
+        "print(\"   - El modelo puede predecir eficazmente las cancelaciones con alta confiabilidad\")\n",
+        "\n",
+        "print(\"\\n2. FACTORES DETERMINANTES SEGÚN SHAP:\")\n",
+        "print(\"   - Tiempo de anticipación (lead_time): Principal predictor de cancelaciones\")\n",
+        "print(\"   - Solicitudes especiales: Reducen la probabilidad de cancelación\")\n",
+        "print(\"   - Precio por habitación: Precios más altos aumentan las cancelaciones\")\n",
+        "print(\"   - Segmento de mercado: Reservas 'Online' tienen mayor riesgo\")\n",
+        "print(\"   - Mes de llegada: Meses de verano (junio, julio, agosto) con más cancelaciones\")\n",
+        "\n",
+        "print(\"\\n3. RECOMENDACIONES ESTRATÉGICAS PARA HOTELES:\")\n",
+        "print(\"   - Implementar políticas de cancelación escalonadas según el lead_time\")\n",
+        "print(\"   - Crear incentivos para solicitudes especiales como método de compromiso\")\n",
+        "print(\"   - Revisar estrategias de precios para equilibrar ingresos y reducir cancelaciones\")\n",
+        "print(\"   - Diseñar estrategias específicas para reservas del segmento 'Online'\")\n",
+        "print(\"   - Ajustar estrategias de overbooking según la temporada del año\")\n",
+        "\n",
+        "print(\"\\n4. SIGUIENTES PASOS:\")\n",
+        "print(\"   - Implementar un sistema de scoring para nuevas reservas\")\n",
+        "print(\"   - Monitorizar el rendimiento del modelo con nuevos datos\")\n",
+        "print(\"   - Desarrollar un dashboard interactivo para uso operativo\")\n",
+        "print(\"   - Complementar con análisis de impacto financiero de las cancelaciones\")"
+      ]
     }
   ],
   "metadata": {
